[project]
name = "skinpy"
version = "0.0.5"
description = "A Python library for Minecraft skins"
authors = [
    {name = "Tim Martin",email = "tim@timmart.in"},
    {name = "Steven Van Ingelgem", email = "steven@vaningelgem.be"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]


[project.urls]
repository = "https://github.com/AurionBE/skinpy"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
